update schedule to contain new speakers

--- a/schedule.html
+++ b/schedule.html
@@ -145,10 +145,10 @@
 						<div class="meta">
 							<h4 class="time mb-3">09:10 - 09:50</h4>
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">
+								<a href="#modal-speaker-jose-valim" data-toggle="modal" data-target="#modal-speaker-jose-valim">
                   <img class="profile-image rounded-circle  mb-2" src="https://dashbit.co/images/team/JV-6c0d230edc6596281e81c03aa56cfc7b.jpg?vsn=d" alt="">
                 </a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Jose Valim</a></div>
+								<div class="name"><a class="theme-link" href="#modal-speaker-jose-valim" data-toggle="modal" data-target="#modal-speaker-jose-valim">Jose Valim</a></div>
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
@@ -162,8 +162,8 @@
 						<div class="meta">
 							<h4 class="time mb-3">10:10 - 10:40</h4>
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/John_Invictus(1).jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">John Invictus</a></div>
+								<a href="#modal-speaker-john-invictus" data-toggle="modal" data-target="#modal-speaker-john-invictus"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/John_Invictus(1).jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-john-invictus" data-toggle="modal" data-target="#modal-speaker-john-invictus">John Invictus</a></div>
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
@@ -177,8 +177,8 @@
 						<div class="meta">
 							<h4 class="time mb-3">10:50 - 11:20</h4>
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Peter_Ullrich.jpeg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Peter Ullrich</a></div>
+								<a href="#modal-speaker-peter-ullrich" data-toggle="modal" data-target="#modal-speaker-peter-ullrich"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Peter_Ullrich.jpeg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-peter-ullrich" data-toggle="modal" data-target="#modal-speaker-peter-ullrich">Peter Ullrich</a></div>
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
@@ -189,10 +189,10 @@
           </div><!--//item-->     
 					<div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">11:40 - 12:10</h4>
+							<h4 class="time mb-3">11:30 - 12:00</h4>
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/juliana_photo.jpeg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Juliana Helena</a></div>
+								<a href="#modal-speaker-juliana-helena" data-toggle="modal" data-target="#modal-speaker-juliana-helena"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/juliana_photo.jpeg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-juliana-helena" data-toggle="modal" data-target="#modal-speaker-juliana-helena">Juliana Helena</a></div>
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
@@ -204,7 +204,7 @@
 					</div><!--//item-->                      
 					<div class="item item-other">
 						<div class="meta">
-							<h4 class="time mb-3">12:10 - 12:40</h4>
+							<h4 class="time mb-3">12:00 - 12:30</h4>
 						</div><!--//meta-->
 						<div class="content">
               <h3 class="title mb-3">Coffee Break</h3>
@@ -214,10 +214,10 @@
 					</div><!--//item-->
 					<div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">12:50 - 13:20</h4>
+							<h4 class="time mb-3">12:35 - 13:05</h4>
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Tymon_Tobolski.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Tymon Tobolski</a></div>
+								<a href="#modal-speaker-tymon-tobolski" data-toggle="modal" data-target="#modal-speaker-tymon-tobolski"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Tymon_Tobolski.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-tymon-tobolski" data-toggle="modal" data-target="#modal-speaker-tymon-tobolski">Tymon Tobolski</a></div>
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
@@ -239,14 +239,14 @@
 					</div><!--//item-->
 					<div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">13:30 - 14:30</h4>
+							<h4 class="time mb-3">13:15 - 13:45</h4>
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/jackie.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Jackie Kaunda</a></div>
+								<a href="#modal-speaker-jackline-kaunda" data-toggle="modal" data-target="#modal-speaker-jackline-kaunda"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/jackie.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-jackline-kaunda" data-toggle="modal" data-target="#modal-speaker-jackline-kaunda">Jackie Kaunda</a></div>
               </div><!--//profile-->
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/linda-otieno.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Linda Achieng</a></div>
+								<a href="#modal-speaker-linda-achieng" data-toggle="modal" data-target="#modal-speaker-linda-achieng"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/linda-otieno.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-linda-achieng" data-toggle="modal" data-target="#modal-speaker-linda-achieng">Linda Achieng</a></div>
 							</div><!--//profile-->              
 						</div><!--//meta-->
 						<div class="content">
@@ -257,32 +257,62 @@
               </div>
               <br><br><br><br><br><br>
 						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-talk">
+          </div><!--//item-->
+          <div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">14:40 - 15:10</h4>
+							<h4 class="time mb-3">13:55 - 14:05</h4>
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="#" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Elixir Outlaws</a></div>
+								<a href="#modal-speaker-getty-orawo" data-toggle="modal" data-target="#modal-speaker-getty-orawo"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/getty-orawo.png" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-getty-orawo" data-toggle="modal" data-target="#modal-speaker-getty-orawo">Getty Orawo</a></div>
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
-							<h3 class="title mb-3">Live Podcast by Elixir Outlaws</h3>
+							<h3 class="title mb-3">Exodus to Elixir (stateless transition)</h3>
 							<div class="location mb-3"></div>
-              <div class="desc mb-3"></div>
+              <div class="desc mb-3">A brief overview of what it entails while transitioning from an object oriented world into a paradigm that could care less about keeping state</div>
               <br><br>
 						</div><!--//content-->
 					</div><!--//item-->
 					<div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">15:30 - 16:10</h4>
+							<h4 class="time mb-3">14:10 - 14:40</h4>
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Francesco_Cesarini.jpeg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Francesco Cesarini</a></div>
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/elixir_outlaws.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Elixir Outlaws</a></div>
+							</div><!--//profile-->
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">Jamii (Community)</h3>
+							<div class="location mb-3"></div>
+              <div class="desc mb-3">Live Podcast by Elixir Outlaws</div>
+              <br><br>
+						</div><!--//content-->
+          </div><!--//item-->
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">15:00 - 15:15</h4>
+							<div class="profile">
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/logos/eef-logo-1.png" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Chantelle Kyenderetta</a></div>
+							</div><!--//profile-->
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">What is Erlang Ecosystem Foundation?</h3>
+							<div class="location mb-3"></div>
+              <div class="desc mb-3">Get to know more about Erlang Ecosystem Foundation</div>
+              <br><br><br><br>
+						</div><!--//content-->
+					</div><!--//item-->          
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">15:25 - 16:05</h4>
+							<div class="profile">
+								<a href="#modal-speaker-francesco-cesarini" data-toggle="modal" data-target="#modal-speaker-francesco-cesarini"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Francesco_Cesarini.jpeg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-francesco-cesarini" data-toggle="modal" data-target="#modal-speaker-francesco-cesarini">Francesco Cesarini</a></div>
               </div><!--//profile-->
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Simon_Thompson_adobespark.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Simon Thompson</a></div>
+								<a href="#modal-speaker-simon-thompson" data-toggle="modal" data-target="#modal-speaker-simon-thompson"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Simon_Thompson_adobespark.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-simon-thompson" data-toggle="modal" data-target="#modal-speaker-simon-thompson">Simon Thompson</a></div>
 							</div><!--//profile-->              
 						</div><!--//meta-->
 						<div class="content">
@@ -294,7 +324,7 @@
 					</div><!--//item-->
           <div class="item item-other">
             <div class="meta">
-              <h4 class="time mb-3">16:10 - 16:20</h4>
+              <h4 class="time mb-3">16:05 - 16:15</h4>
             </div><!--//meta-->
             <div class="content">
               <h3 class="title mb-3">Closing Remarks</h3>
@@ -316,10 +346,10 @@
 					</div><!--//item-->
           <div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">10:20 - 10:50</h4>
+							<h4 class="time mb-3">10:10 - 10:40</h4>
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Jeffrey_Matthias.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Jeffrey Matthias</a></div>
+								<a href="#modal-speaker-jeffrey-mathias" data-toggle="modal" data-target="#modal-speaker-jeffrey-mathias"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Jeffrey_Matthias.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-jeffrey-mathias" data-toggle="modal" data-target="#modal-speaker-1">Jeffrey Matthias</a></div>
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
@@ -333,8 +363,8 @@
 						<div class="meta">
 							<h4 class="time mb-3">11:00 - 12:30</h4>
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Imo_Inyang.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Imo Yang</a></div>
+								<a href="#modal-speaker-imo-inyang" data-toggle="modal" data-target="#modal-speaker-imo-inyang"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Imo_Inyang.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-imo-inyang" data-toggle="modal" data-target="#modal-speaker-imo-inyang">Imo Inyang</a></div>
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
@@ -358,8 +388,8 @@
 						<div class="meta">
 							<h4 class="time mb-3">13:00 - 14:30</h4>
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Nikola_Begedin(1).jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Nikola Begedin</a></div>
+								<a href="#modal-speaker-nikola-begedin" data-toggle="modal" data-target="#modal-speaker-nikola-begedin"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Nikola_Begedin(1).jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-nikola-begedin" data-toggle="modal" data-target="#modal-speaker-nikola-begedin">Nikola Begedin</a></div>
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
@@ -374,10 +404,10 @@
 
           <div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">15:00 - 15:30</h4>
+							<h4 class="time mb-3">14:40 - 15:20</h4>
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/bruce-brown-black.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Bruce Tate</a></div>
+								<a href="#modal-speaker-bruce-tate" data-toggle="modal" data-target="#modal-speaker-bruce-tate"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/bruce-brown-black.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-bruce-tate" data-toggle="modal" data-target="#modal-speaker-bruce-tate">Bruce Tate</a></div>
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
@@ -389,7 +419,7 @@
           </div><!--//item-->      
           <div class="item item-other">
             <div class="meta">
-              <h4 class="time mb-3">15:30 - 15:40</h4>
+              <h4 class="time mb-3">15:20 - 15:30</h4>
             </div><!--//meta-->
             <div class="content">
               <h3 class="title mb-3">Closing Remarks</h3>
@@ -399,7 +429,7 @@
           </div><!--//item-->
           <div class="item item-other">
 						<div class="meta">
-							<h4 class="time mb-3">15:40 - 16:40</h4>
+							<h4 class="time mb-3">15:30 - 16:30</h4>
 						</div><!--//meta-->
 						<div class="content">
 							<h3 class="title mb-3">Dinner &amp; After-party</h3>
