add bios for keynote speakers on the homepage

--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
     <div class="row">
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="https://dashbit.co/images/team/JV-6c0d230edc6596281e81c03aa56cfc7b.jpg?vsn=d" class="card-img-top rounded-0" alt="logo"></a>
+          <a href="#modal-speaker-jose-valim" data-toggle="modal" data-target="#modal-speaker-jose-valim"><img src="https://dashbit.co/images/team/JV-6c0d230edc6596281e81c03aa56cfc7b.jpg?vsn=d" class="card-img-top rounded-0" alt="logo"></a>
           <div class="card-body">
             <h5 class="card-title mb-2">Jose Valim</h5>
             <div class="card-text mb-3">
               <div class="meta"> Creator of Elixir and Plug </div>
               <div class="meta"> Member of Ecto, ExDoc, and Phoenix teams </div>
             </div><!--//card-text-->
-<!--            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>-->
+           <a href="#modal-speaker-jose-valim" data-toggle="modal" data-target="#modal-speaker-jose-valim">Read more &rarr;</a>
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
@@ -194,7 +194,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/bruce-brown-black.jpg" class="card-img-top rounded-0" alt="logo"></a>
+          <a href="#modal-speaker-bruce-tate" data-toggle="modal" data-target="#modal-speaker-bruce-tate"><img src="assets/images/speakers/bruce-brown-black.jpg" class="card-img-top rounded-0" alt="logo"></a>
           <div class="card-body">
             <h5 class="card-title mb-2">Bruce Tate</h5>
             <div class="card-text mb-3">
@@ -202,7 +202,7 @@
               <div class="meta">OTP+LiveView training; books and vids for Julia and Elixir.
                 Author  Languages in 7 wks, Programming Phoenix LiveView, others.</div>
             </div><!--//card-text-->
-<!--            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>-->
+           <a href="#modal-speaker-bruce-tate" data-toggle="modal" data-target="#modal-speaker-bruce-tate">Read more &rarr;</a>
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
@@ -215,13 +215,13 @@
       </div>
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/Francesco_Cesarini.jpeg" class="card-img-top rounded-0" alt="logo"></a>
+          <a href="#modal-speaker-francesco-cesarini" data-toggle="modal" data-target="#modal-speaker-francesco-cesarini"><img src="assets/images/speakers/Francesco_Cesarini.jpeg" class="card-img-top rounded-0" alt="logo"></a>
           <div class="card-body">
             <h5 class="card-title mb-2">Francesco Cesarini</h5>
             <div class="card-text mb-3">
               <div class="meta">Founder & Technical Director @ Erlang Solutions, O'Reilly Author</div>
             </div><!--//card-text-->
-<!--            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>-->
+           <a href="#modal-speaker-francesco-cesarini" data-toggle="modal" data-target="#modal-speaker-francesco-cesarini">Read more &rarr;</a>
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
@@ -234,13 +234,13 @@
       </div>
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/Simon_Thompson_adobespark.jpg" class="card-img-top rounded-0" alt="logo"></a>
+          <a href="#modal-speaker-simon-thompson" data-toggle="modal" data-target="#modal-speaker-simon-thompson"><img src="assets/images/speakers/Simon_Thompson_adobespark.jpg" class="card-img-top rounded-0" alt="logo"></a>
           <div class="card-body">
             <h5 class="card-title mb-2">Simon Thompson</h5>
             <div class="card-text mb-3">
               <div class="meta">Researcher, author and teacher</div>
             </div><!--//card-text-->
-<!--            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>-->
+           <a href="#modal-speaker-simon-thompson" data-toggle="modal" data-target="#modal-speaker-simon-thompson">Read more &rarr;</a>
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
@@ -405,7 +405,158 @@
 			</div><!--//row-->
 
 		</div><!--//container-->
-	</section><!--//partners-->
+  </section><!--//partners-->
+  
+  <!-- Modal Speaker Bruce Tate -->
+<div class="modal modal-speaker modal-speaker-1" id="modal-speaker-bruce-tate" tabindex="-1" role="dialog" aria-labelledby="speaker-1-ModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 id="speaker-1-ModalLabel" class="modal-title sr-only">Bruce Tate</h4>
+      </div>
+      <div class="modal-body p-0">
+        <div class="media flex-column flex-md-row theme-bg-light p-4 p-lg-5">
+          <img class="profile-image mb-3 mb-md-0 mr-md-4 rounded-circle mx-auto" src="assets/images/speakers/bruce-brown-black.jpg" alt="logo" />
+
+          <div class="media-body text-center text-md-left mx-auto">
+            <h2 class="name mb-2">Bruce Tate</h2>
+            <div class="meta">Founder</div>
+            <div class="meta mb-2">Groxio</div>
+            <ul class="social-list list-inline mb-0">
+              <li class="list-inline-item"><a  href="https://twitter.com/redrapids"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="https://www.linkedin.com/in/bruce-tate-a836b/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="https://github.com/batate"><i class="fab fa-github fa-fw"></i></a></li>
+            </ul><!--//social-list-->
+          </div><!--//media-body-->
+        </div><!--//media-->
+
+        <div class="desc p-4 p-lg-5">
+          <p>
+            Bruce Tate is a kayaker, climber, programmer and father of two from Chattanooga, Tennessee. The award winning author's dozen titles include <strong>Seven Languages in Seven Weeks</strong>, <strong>Elixir Systems with OTP</strong>, and <strong>Phoenix LiveView</strong>. His love for teaching and computer languages led him to found Groxio in 2018, a teaching company that uses innovative techniques to teach developers Elixir and the joy of discovering new languages. The serial entrepreneur has helped start three companies, and before Groxio, served as CTO for icanmakeitbetter. Bruce stays active in the functional programming community as a speaker, author, editor and conference organizer.
+          </p>
+          <p class="mb-0">
+            Bruce will be giving a Keynote talk titled: <strong>Exploring Practices of Growth and Decline</strong>
+          </p>
+        </div>
+      </div><!--//modal-body-->
+    </div><!--//modal-content-->
+  </div><!--//modal-dialog-->
+</div><!--//modal-->
+
+<!-- Modal Speaker Francesco Cesarini -->
+<div class="modal modal-speaker modal-speaker-1" id="modal-speaker-francesco-cesarini" tabindex="-1" role="dialog" aria-labelledby="speaker-1-ModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 id="speaker-1-ModalLabel" class="modal-title sr-only">Francesco Cesarini</h4>
+      </div>
+      <div class="modal-body p-0">
+        <div class="media flex-column flex-md-row theme-bg-light p-4 p-lg-5">
+          <img class="profile-image mb-3 mb-md-0 mr-md-4 rounded-circle mx-auto" src="assets/images/speakers/Francesco_Cesarini.jpeg" alt="logo" />
+
+          <div class="media-body text-center text-md-left mx-auto">
+            <h2 class="name mb-2">Francesco Cesarini</h2>
+            <div class="meta">Founder & Technical Director</div>
+            <div class="meta mb-2">Erlang Solutions</div>
+            <ul class="social-list list-inline mb-0">
+              <li class="list-inline-item"><a  href="https://twitter.com/FrancescoC"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="https://www.linkedin.com/in/francescocesarini/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href=""><i class="fab fa-github fa-fw"></i></a></li>
+            </ul><!--//social-list-->
+          </div><!--//media-body-->
+        </div><!--//media-->
+
+        <div class="desc p-4 p-lg-5">
+          <p>
+            Founder of Erlang Solutions Ltd. Francesco has used Erlang on a daily basis since 1995, starting as an intern at Ericsson’s computer science laboratory, the birthplace of Erlang. He moved on to Ericsson’s Erlang training and consulting arm working on the first release of OTP, applying it to turnkey solutions and flagship telecom applications. In 1999, soon after Erlang was released as open source, he founded Erlang Solutions, who have become the world leaders in Erlang based consulting, contracting, training and systems development. Francesco has worked in major Erlang based projects both within and outside Ericsson, and as Technical Director, has led the development and consulting teams at Erlang Solutions. He is the co-author of 'Erlang Programming' and 'Designing for Scalability with Erlang/OTP' both published by O'Reilly. Francesco is also a lecturer at the University of Oxford, and has participated in the Future Learn Erlang MOOC, O'Reilly and University of Kent online Master Classes and is a regular conference speaker and tutor.
+          </p>
+          <p class="mb-0">
+            Francesco will be giving a Keynote talk titled: <strong>Industry versus academia? Learning and teaching programming</strong> together with <a href="#modal-speaker-simon-thompson" data-toggle="modal" data-target="#modal-speaker-simon-thompson">Simon Thompson</a>
+          </p>
+        </div>
+      </div><!--//modal-body-->
+    </div><!--//modal-content-->
+  </div><!--//modal-dialog-->
+</div><!--//modal-->
+
+<!-- Modal Speaker Simon Thompson -->
+<div class="modal modal-speaker modal-speaker-1" id="modal-speaker-simon-thompson" tabindex="-1" role="dialog" aria-labelledby="speaker-1-ModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 id="speaker-1-ModalLabel" class="modal-title sr-only">Simon Thompson</h4>
+      </div>
+      <div class="modal-body p-0">
+        <div class="media flex-column flex-md-row theme-bg-light p-4 p-lg-5">
+          <img class="profile-image mb-3 mb-md-0 mr-md-4 rounded-circle mx-auto" src="assets/images/speakers/Simon_Thompson_adobespark.jpg" alt="logo" />
+
+          <div class="media-body text-center text-md-left mx-auto">
+            <h2 class="name mb-2">Simon Thompson</h2>
+            <div class="meta">Researcher, author and teacher</div>
+            <div class="meta mb-2">IOHK, University of Kent and ELTE</div>
+            <ul class="social-list list-inline mb-0">
+              <li class="list-inline-item"><a  href="https://twitter.com/thompson_si"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href=""><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href=""><i class="fab fa-github fa-fw"></i></a></li>
+            </ul><!--//social-list-->
+          </div><!--//media-body-->
+        </div><!--//media-->
+
+        <div class="desc p-4 p-lg-5">
+          <p>
+            Researcher, author and teacher, senior researcher for IOHK and professor at the University of Kent and ELTE, Budapest.
+
+            His research has covered many aspects of functional programming, including verification, tool building and testing for Erlang, Haskell and OCaml. He is an author of books on type theory, Haskell and Erlang, and runs a MOOC on Erlang for FutureLearn. He is currently a senior research lead at IOHK, developing a DSL for financial contracts on blockchain.
+          </p>
+          <p class="mb-0">
+            Simon will be giving a Keynote talk titled: <strong>Industry versus academia? Learning and teaching programming</strong> together with <a href="#modal-speaker-francesco-cesarini" data-toggle="modal" data-target="#modal-speaker-francesco-cesarini">Francesco Cesarini</a>
+          </p>
+        </div>
+      </div><!--//modal-body-->
+    </div><!--//modal-content-->
+  </div><!--//modal-dialog-->
+</div><!--//modal-->
+
+<!-- Modal Speaker Jose Valim -->
+<div class="modal modal-speaker modal-speaker-1" id="modal-speaker-jose-valim" tabindex="-1" role="dialog" aria-labelledby="speaker-1-ModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 id="speaker-1-ModalLabel" class="modal-title sr-only">Jose Valim</h4>
+      </div>
+      <div class="modal-body p-0">
+        <div class="media flex-column flex-md-row theme-bg-light p-4 p-lg-5">
+          <img class="profile-image mb-3 mb-md-0 mr-md-4 rounded-circle mx-auto" src="https://dashbit.co/images/team/JV-6c0d230edc6596281e81c03aa56cfc7b.jpg?vsn=d" alt="logo" />
+
+          <div class="media-body text-center text-md-left mx-auto">
+            <h2 class="name mb-2">Jose Valim</h2>
+            <div class="meta">Chief Adoption Officer</div>
+            <div class="meta mb-2">Dashbit</div>
+            <ul class="social-list list-inline mb-0">
+              <li class="list-inline-item"><a  href="https://twitter.com/josevalim"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="https://github.com/josevalim"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href=""><i class="fab fa-github fa-fw"></i></a></li>
+            </ul><!--//social-list-->
+          </div><!--//media-body-->
+        </div><!--//media-->
+
+        <div class="desc p-4 p-lg-5">
+          <p>
+            José Valim is the creator of the Elixir programming language and Chief Adoption Officer at Dashbit, a company that focuses on Sustainable Open Source and Continuous Adoption to boost the Elixir ecosystem. He is also a seasoned speaker, the author of three programming books, and an active member of the Open Source community.
+          </p>
+          <p class="mb-0">
+            Jose will be giving a Keynote talk titled: <strong>Elixir v1.12 updates and Q&A</strong> 
+          </p>
+        </div>
+      </div><!--//modal-body-->
+    </div><!--//modal-content-->
+  </div><!--//modal-dialog-->
+</div><!--//modal-->
+
 
 	<footer class="footer py-5 theme-bg-primary">
 		<div class="container text-center">
