--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 		<div class="row logos justify-content-center">
 			<a href="https://www.frame.io" target="_blank" rel="noopener" class="logo-item col-6 col-md-4 col-lg-4"><img
 					src="assets/images/logos/frame-logo.png" alt="frame.io logo"></a>
-			<a href="https://binarynoggin.com" target="_blank" rel="noopener" class="logo-item col-6 col-md-4 col-lg-4"><img
+			<a href="https://www.smartvokat.com/" target="_blank" rel="noopener" class="logo-item col-6 col-md-4 col-lg-4"><img
 					src="assets/images/logos/smv-logo-wordmark-rgb.png" alt="smartvorkat logo"></a>		
 		</div>
 		
