--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>ElixirConfAfr - The Premiere Elixir Conference in Africa</title>
+  <title>ElixirConfAfr - The Largest Elixir Conference in Africa</title>
   <meta name="description" content="ElixirConfAfr is an annual conference bringing together BEAM enthusiasts for collaboration, networking and learning.">
   <meta name="keywords" content="Conference, Africa, conferences in africa, Elixir, Beam, Elixir Conference, Elixir Kenya, Elixir Africa, Africa Tech, Afr,  Conf"/>
   <meta name="author" content="ElixirConfAfr">
@@ -76,7 +76,7 @@
           </a>
         </div>
 
-        <div class="navbar-btn order-lg-2"><a class="btn btn-secondary" href="http://bit.ly/elixir-conf-africa" target="_blank">Tickets</a></div>
+        <div class="navbar-btn order-lg-2"><a class="btn btn-secondary" href="https://sessionize.com/elixir-conf-africa-2022/" target="_blank">Call For Speakers</a></div>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -86,8 +86,8 @@
           <ul class="nav navbar-nav">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
-           <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
+<!--            <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>-->
+<!--           <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>-->
             <li class="nav-item"><a class="nav-link scrollto" href="/#sponsors-section">Sponsors</a></li>
           </ul><!--//nav-->
         </div><!--//navabr-collapse-->
