--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 		<div class="container">
 			<div class="hero-text-block">
 				<h1 class="hero-heading mb-2">ElixirConfAfr 2022</h1>
-				<div class="hero-meta mb-3"><i class="far fa-calendar-alt mr-2"></i>Conference: 6th May 2022<br>
-					<i class="far fa-calendar-alt mr-2"></i>Workshop: 7th May 2022<br>
-					<i class="fas fa-map-marker-alt mx-2"></i>Hybrid</div>
+				<div class="hero-meta mb-3">Theme: Elixir as a power tool<br>
+					<i class="far fa-calendar-alt mr-2"></i>Conference: May 2022<br>
+					<i class="fas fa-map-marker-alt mr-2"></i>Virtual, Africa</div>
 				<div class="hero-intro mb-4">The Largest Elixir Conference in <br> Africa</div>
 				<div class="hero-cta">
 					<a class="btn btn-secondary btn-lg mb-2 disabled" href="http://bit.ly/elixir-conf-africa" target="_blank">Tickets Coming Soon!</a>
