--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<div class="hero-text-block">
 				<h1 class="hero-heading mb-2">ElixirConfAfr 2022</h1>
 				<div class="hero-meta mb-3">Theme: Elixir as a power tool<br>
-					<i class="far fa-calendar-alt mr-2"></i>Conference: May 2022<br>
+					<i class="far fa-calendar-alt mr-2"></i>Conference: 11<sup>th</sup> - 12<sup>th</sup> Aug  '22<br>
 					<i class="fas fa-map-marker-alt mr-2"></i>Virtual, Africa</div>
 				<div class="hero-intro mb-4">The Largest Elixir Conference in <br> Africa</div>
 				<div class="hero-cta">
